--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -32,18 +32,44 @@ label {
   width: 100px;
 }
 
+.header {
+  background-color: #0984e3;
+  margin-bottom: 24px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  width: 100%;
+  height: 98px;
+  display: flex;
+  flex-direction: row;
+}
+
 .menu {
   display: flex;
   justify-content: space-around;
   align-items: center;  
-  width: 100%;
-  height: 98px;
-  background-color: #0984e3;
-  margin-bottom: 24px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  width: 80%;
+  height: 100%; 
+}
+
+.logout {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;  
+}
+
+.logout span {
+  color: #ffffff;
+  font-size: 18px;
+}
+
+.logout a {
+  color: #ffffff;
+  font-size: 18px;
 }
 
 .menu h1, a {
+  font-size: 24px;
   color: #FFFFFF !important;
   margin: 0px;
   text-decoration: none;
